added a nav tab

--- a/ProjectWebsite/home.html
+++ b/ProjectWebsite/home.html
@@ -18,6 +18,7 @@
       <li><a id="first" href="home.html" class="thispage">Home</a></li>
       <li><a href="hardware.html">Hardware</a></li>
       <li><a href="software.html" >Software</a></li>
+      <li><a href="resources.html">Resources</a></li>      
       <li><a id="last" href="members.html">Team Members</a></li>
     </ul>
   </nav>
