--- a/ProjectWebsite/resources.html
+++ b/ProjectWebsite/resources.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Roslyn: The Team</title>
+<title>Roslyn: Resources</title>
 <link href="styles/main.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/black-ops-one:n4:default;courier-prime:n4:default.js" type="text/javascript"></script>
@@ -12,22 +12,22 @@
 <body>
 <div id="wrapper">
   <header id="title">
-    <h1>The Team</h1>
+    <h1>Resources</h1>
   </header>
   <nav id="mainnav">
     <ul>
       <li><a id="first" href="home.html" >Home</a></li>
       <li><a href="hardware.html">Hardware</a></li>
       <li><a href="software.html">Software</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a id="last" href="members.html" class="thispage">Team Members</a></li>
+      <li><a href="resources.html" class="thispage">Resources</a></li>
+      <li><a id="last" href="members.html">Team Members</a></li>
     </ul>
   </nav>
   <br>
   <p><hr></p>
 
-<p id="team">
-Jared Rhizor, Timothy Sweet, and Nishok Yadav are all graduating seniors in Computer Science and Engineering at the University of Nevada, Reno. We are <b>team number 2</b> in the class. Our advisor for this project is <b>Dr. David Feil-Seifer</b>. Dr. Feil-Seifer performs research in the area of Human Robot Interaction (HRI) and is assisting the team in solving problems when they arise. The instructor for the <b>CS 426 Senior Projects</b> course is <b>Dr. Sergiu Dascalu</b>.
+<p id="sources">
+This is where we will put our outside sources and sites with other products similar to ours.
 <hr></p>
 
 </div>
