--- a/ProjectWebsite/software.html
+++ b/ProjectWebsite/software.html
@@ -19,6 +19,7 @@
       <li><a id="first" href="home.html" >Home</a></li>
       <li><a href="hardware.html">Hardware</a></li>
       <li><a href="software.html" class="thispage">Software</a></li>
+      <li><a href="resources.html">Resources</a></li>
       <li><a id="last" href="members.html">Team Members</a></li>
     </ul>
   </nav>
