--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Roslyn: A Tour Guide Robot</title>
-<link href="styles/main.css" rel="stylesheet" type="text/css">
+<link href="main.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/black-ops-one:n4:default;source-sans-pro:n2:default;courier-prime:n4:default.js" type="text/javascript"></script>
 </head>
