--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
   <br>
   <br>
   <div id="main">
-  <img src="ProjectWebsite/images/roslyn.jpg"  alt="" width="245" height="184"/>
+  <img src="roslyn.jpg"  alt="" width="245" height="184"/>
   <article id="purpose">
   <hr>
     <h2>Purpose</h2>
