Fixed more of my bad HTML

--- a/resources.html
+++ b/resources.html
@@ -47,21 +47,28 @@
 </ul>
 <h1>Reference Book:</h1>
 <ul>
-<li>Russell, S. Artificial Intelligence: A Modern Approach.  Upper Saddle River: Prentice Hall, 2009.
-<ul><li>Artificial Intelligence: A Modern Approach is the standard AI book used in college courses and basic AI research. It provides models and evaluation tools for heuristic path planning algorithms, sensory/perception challenges, etc. and mathematical solutions to those various problems. 
-The Social Navigation component will use methods described in this book, especially those related to graph weighting and heuristically predicting a user’s actions and responding appropriately.
-Methods from the book will also be used in the Attention Detection node for high level image processing, a form of signal processing described in the book.
-</li></ul>
+  <li>Russell, S. Artificial Intelligence: A Modern Approach.  Upper Saddle River: Prentice Hall, 2009.
+    <ul>
+      <li>Artificial Intelligence: A Modern Approach is the standard AI book used in college courses and basic AI research. It provides models and evaluation tools for heuristic path planning algorithms, sensory/perception challenges, etc. and mathematical solutions to those various problems. The Social Navigation component will use methods described in this book, especially those related to graph weighting and heuristically predicting a user’s actions and responding appropriately. Methods from the book will also be used in the Attention Detection node for high level image processing, a form of signal processing described in the book.</li>
+    </ul>
+  </li>
+</ul>
 <h1>Extra Related Websites:</h1>
-<ul><li>www.ros.org
-<ul><li>The Robot Operating System homepage, providing access to ROS packages, references, and development information.
-</li>
-<li>www.docs.opencv.org
-<ul><li>The Open Computer Vision resource homepage, providing references to the OpenCV library.
-</li>
-<li>groups.csail.mit.edu/vision/vip/context/
-<ul><li>The WATSON: Real time head pose tracking and gesture recognition library provides a framework for automatic attention detection, which can be used to infer what things a user would be interested in.
-</li></ul>
+<ul>
+  <li><a href="http://www.ros.org">www.ros.org</a>
+    <ul>
+      <li>The Robot Operating System homepage, providing access to ROS packages, references, and development information.</li>
+    </ul>
+  <li><a href="http://www.docs.opencv.org">www.docs.opencv.org</a>
+    <ul>
+      <li>The Open Computer Vision resource homepage, providing references to the OpenCV library.</li>
+    </ul>
+  <li><a href="groups.csail.mit.edu/vision/vip/context/">groups.csail.mit.edu/vision/vip/context/</a>
+    <ul>
+      <li>The WATSON: Real time head pose tracking and gesture recognition library provides a framework for automatic attention detection, which can be used to infer what things a user would be interested in.</li>
+    </ul>
+  </li>
+</ul>
 <hr></p>
 
 </div>
