Made things prettier

--- a/resources.html
+++ b/resources.html
@@ -29,17 +29,17 @@
 <p id="sources">
 <h1>Reference Journals:</h1>
 <ul>
-  <li>K. Cho, B. Lee, “Intelligent lead: a novel HRI sensor for guide robots”, Sensors, 2012.
+  <li><b>K. Cho, B. Lee, “Intelligent lead: a novel HRI sensor for guide robots”, Sensors, 2012.</b>
     <ul>
       <li>This paper’s navigation goal is the same as this project, however it uses a physical arm to connect the robot to the user. The paper provides interesting insights into some of the human interaction elements associated with robotic tour guides, which may be applicable to a tour guide robot not led by a mechanical arm. The authors found that the users were able to understand the robot’s intentions and the robot was also able to understand the users intentions, and their insight on this topic will be useful in the Attention Detection node.</li>
     </ul>
   </li>
-  <li>D. Feil-Seifer, M. J Matari ́, ”Benchmarks for evaluating socially assistive robotics”, Interaction Studies, 2007.
+  <li><h2>D. Feil-Seifer, M. J Matari ́, ”Benchmarks for evaluating socially assistive robotics”, Interaction Studies, 2007</h2>
     <ul>
       <li>This paper provides benchmarks which can be used to determine if the robot is performing in a socially aware way. This is important because it sets the Tour Guide Robot apart from other tour guide robots, and provides tangible and comparable measurements of social interaction. The paper will be beneficial in the Social Navigation node. It takes the evaluator from qualitatively evaluating how social the robot is to quantitative measures of the robot’s effectiveness.</li>
     </ul>
   </li>
-  <li>H. Avilés, M. Alvarado-González, E. Venegas, C. Rascón, I. V. Meza, L. Pineda, “Development of a Tour–Guide Robot Using Dialogue Models and a Cognitive Architecture”, Advances in Artificial Intelligence, 2010.
+  <li><h3>és, M. Alvarado-González, E. Venegas, C. Rascón, I. V. Meza, L. Pineda, “Development of a Tour–Guide Robot Using Dialogue Models and a Cognitive Architecture”, Advances in Artificial Intelligence, 2010.</h3>
     <ul>
       <li>This paper provides theoretical models for determining what direction a user is directing their attention, which is useful for implementing attention detection. The authors did not completely specify their results, thus it is believed that the system described was never fully implemented. The methods provided by the authors seem to be reasonable and could prove useful in the Attention Detection node. Methods described in this paper can be used to augment what is already implemented in the WATSON framework.</li>
     </ul>
