--- a/resources.html
+++ b/resources.html
@@ -63,7 +63,7 @@
     <ul>
       <li>The Open Computer Vision resource homepage, providing references to the OpenCV library.</li>
     </ul>
-  <li><a href="groups.csail.mit.edu/vision/vip/context/">groups.csail.mit.edu/vision/vip/context/</a>
+  <li><a href="http://groups.csail.mit.edu/vision/vip/context/">groups.csail.mit.edu/vision/vip/context/</a>
     <ul>
       <li>The WATSON: Real time head pose tracking and gesture recognition library provides a framework for automatic attention detection, which can be used to infer what things a user would be interested in.</li>
     </ul>
