Added roslibjs to the tablet interface.

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 
 	<script src="assets/js/jquery2.js"></script>
+	<script src="assets/js/eventemitter2.js"></script>
+	<script src="assets/js/roslib.js"></script>
 	<script src="assets/js/main.js"></script>
 </head>
 <body>
