updated interface design

--- a/ProjectWebsite/members.html
+++ b/ProjectWebsite/members.html
@@ -20,7 +20,7 @@
       <li><a href="hardware.html">Hardware</a></li>
       <li><a href="software.html">Software</a></li>
       <li><a href="resources.html">Resources</a></li>
-      <li><a id="last" href="members.html" class="thispage">Team Members</a></li>
+      <li><a id="last" href="members.html" class="thispage">The Team</a></li>
     </ul>
   </nav>
   <br>
