Added functioning roslibjs to new interface.

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -1,19 +1,29 @@
-<!doctype html>
-
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="utf-8">
 
-	<title>Roslyn</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+<title>Roslyn</title>
 
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="utf-8" />
 
-	<link rel="stylesheet" href="assets/css/style.css">
 
-	<script src="assets/js/jquery2.js"></script>
-	<script src="assets/js/main.js"></script>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+
+<link rel="stylesheet" href="assets/css/style.css">
+
+<script src="assets/js/jquery2.js"></script>
+<script src="assets/js/eventemitter2.js"></script>
+<script src="assets/js/roslib.js"></script>
+
+<script src="assets/js/main.js"></script>
+
+<script>
+  // Connecting to ROS
+  // -----------------
+
+</script>
 </head>
+
 <body>
 
 
