added leaflet library

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -10,10 +10,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <link rel="stylesheet" href="assets/css/style.css">
+ <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
+
 
 <script src="assets/js/main.js"></script>
 
@@ -38,9 +40,8 @@
 </div>
 
 <div id="map_pane">
-	<!-- dots -->
-	<div class="marker" style="top:380px;left:610px;"></div>
-	<div class="marker" style="top:420px;left:350px;"></div>
+
+
 </div>
 
 <div id="interactive_mode_pane">
