--- a/tablet/index.html
+++ b/tablet/index.html
@@ -10,11 +10,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <link rel="stylesheet" href="assets/css/style.css">
- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+ <link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
 
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
+
 
 
 <script src="assets/js/main.js"></script>
@@ -39,10 +40,21 @@
 	<div id="message">Welcome to the Computer Science &amp; Engineering Department. I can show you offices, labs, and the computing center in the department. </div>
 </div>
 
+<!-->
 <div id="map_pane">
-
+<div id="map" style="width: 600px; height: 400px"></div>
+	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
+<script>
+var map = L.map('map',center: [51.505, -0.09],zoom: 13);
+</script>
 
 </div>
+</!-->
+<div id="map" style="width: 600px; height: 400px"></div>
+	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
+<script>
+var map = L.map('map',center: [51.505, -0.09],zoom: 13);
+</script>
 
 <div id="interactive_mode_pane">
 	<!-- dots -->
