--- a/tablet/test.html
+++ b/tablet/test.html
@@ -2,21 +2,47 @@
 <!DOCTYPE html>
 <html>
 <head>
- <link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
-
+	<link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
+	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
+	<style type="text/css">.leaflet-container {
+    background: #fff;
+} .leaflet-control-attribution { display: none; }
+</style>
 </head>
 <body>
 	 <div id="map" style="height: 800px; width: 1280px"></div>
-	   <script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
+
 		<script>
-		var map = L.map('map').setView([51.5, -0.09], 13);
+		var map = L.map('map', {zoom:9, minZoom:9, maxZoom:11, zoomControl:false}).setView([0,0], 0);
 
-		L.tileLayer('assets/img/map2.png', {
-    	maxZoom: 15
-		}).addTo(map);
+		var southWest = L.latLng(-400/360.0, -640/360.0),
+	    	northEast = L.latLng(400/360.0, 640/360.0),
+	    	bounds = L.latLngBounds(southWest, northEast);
 
-		var marker = L.marker([51.5, -0.09]).addTo(map);
+		L.imageOverlay('assets/img/map2.png', bounds).addTo(map);
+
+		var marker = L.marker([0, 0]).addTo(map);
 		marker.bindPopup("Engineering Computing Center (ECC). ").openPopup();
+
+		var popup = L.popup();
+
+function onMapClick(e) {
+    popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
+}
+
+map.on('click', onMapClick);
+
+		var southWest2 = L.latLng(-400/360.0, -640/360.0),
+	    	northEast2 = L.latLng(400/360.0, 640/360.0),
+	    	bounds2 = L.latLngBounds(southWest2, northEast2);
+
+map.setMaxBounds(bounds2);
+
+
 		</script>
+
 </body>
 </html>
