other changes to leaflet

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -16,8 +16,6 @@
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
 
-
-
 <script src="assets/js/main.js"></script>
 
 <script>
@@ -40,16 +38,11 @@
 	<div id="message">Welcome to the Computer Science &amp; Engineering Department. I can show you offices, labs, and the computing center in the department. </div>
 </div>
 
-<!-->
+
 <div id="map_pane">
-<div id="map" style="width: 600px; height: 400px"></div>
-	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
-<script>
-var map = L.map('map',center: [51.505, -0.09],zoom: 13);
-</script>
 
 </div>
-</!-->
+
 <div id="map" style="width: 600px; height: 400px"></div>
 	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
 <script>
@@ -60,6 +53,10 @@ var map = L.map('map',center: [51.505, -0.09],zoom: 13);
 	<!-- dots -->
 	<div class="marker" style="top:360px;left:960px;"></div>
 	<div class="marker" style="top:270px;left:350px;"></div>
+</div>
+
+<div id="end_tour_pane">
+	<div id="message_end">Thank you for touring the Computer Science &amp; Engineering Department. I hope you enjoyed your time and learned about the incredible program we have here as well as some interesting research that our department performs. </div>
 </div>
 
 <div id="footer">
