--- a/tablet/test.html
+++ b/tablet/test.html
@@ -2,16 +2,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
- <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
  <link rel="stylesheet" href="test.css">
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+ <link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
+ <script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
+	
+<!-->	
+	<style type="text/css">.leaflet-container {
+    background: #fff;
+} .leaflet-control-attribution { display: none; }
+</style>
+<!-->
+
 </head>
 <body>
-	 <div id="map" style="height: 400px; width: 1280px"></div>
-	   <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+	 <div id="map" style="height: 800px; width: 1280px"></div>
 		<script>
-		var map = L.map('map').setView([0, 0], 1);
 
 		//create an array to hold all the markers
    		var markers = [
@@ -20,18 +26,23 @@
    			["Marker 3", 51.0, -40.04]
    		];
 
-   		//set map background image and other settings 
-		L.tileLayer('assets/img/map2.png', {
-    	maxZoom: 1.5,
-    	minZoom: 1,
-		}).addTo(map);
+		var map = L.map('map', {zoom:9, minZoom:9, maxZoom:11, zoomControl:false}).setView([0,0], 0);
 
-		//TODO --- trying to get bounds to work
-		var southWest = L.latLng(51.45775,0.04343),
-   		 	northEast = L.latLng(51.4801,0.00103, -74.125),
-   		 	bounds = L.latLngBounds(southWest, northEast);
+		var southWest = L.latLng(-400/360.0, -640/360.0),
+	    	northEast = L.latLng(400/360.0, 640/360.0),
+	    	bounds = L.latLngBounds(southWest, northEast);
 
-   		map.fitBounds(bounds);
+		L.imageOverlay('assets/img/map2.png', bounds).addTo(map);
+
+		var marker = L.marker([0, 0]).addTo(map);
+		marker.bindPopup("Engineering Computing Center (ECC). ").openPopup();
+
+		//sets bounds
+		var southWest2 = L.latLng(-400/360.0, -640/360.0),
+	    	northEast2 = L.latLng(400/360.0, 640/360.0),
+	    	bounds2 = L.latLngBounds(southWest2, northEast2);
+
+		map.setMaxBounds(bounds2);
 
    		//Place all markers on the map
 		for (var i = 0; i < markers.length; i++) 
@@ -48,48 +59,7 @@
 		}
 
 		map.on('click', onMapClick);
-=======
-	<link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
-	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
-	<style type="text/css">.leaflet-container {
-    background: #fff;
-} .leaflet-control-attribution { display: none; }
-</style>
-</head>
-<body>
-	 <div id="map" style="height: 800px; width: 1280px"></div>
 
-		<script>
-		var map = L.map('map', {zoom:9, minZoom:9, maxZoom:11, zoomControl:false}).setView([0,0], 0);
-
-		var southWest = L.latLng(-400/360.0, -640/360.0),
-	    	northEast = L.latLng(400/360.0, 640/360.0),
-	    	bounds = L.latLngBounds(southWest, northEast);
-
-		L.imageOverlay('assets/img/map2.png', bounds).addTo(map);
-
-		var marker = L.marker([0, 0]).addTo(map);
-		marker.bindPopup("Engineering Computing Center (ECC). ").openPopup();
-
-		var popup = L.popup();
-
-function onMapClick(e) {
-    popup
-        .setLatLng(e.latlng)
-        .setContent("You clicked the map at " + e.latlng.toString())
-        .openOn(map);
-}
-
-map.on('click', onMapClick);
-
-		var southWest2 = L.latLng(-400/360.0, -640/360.0),
-	    	northEast2 = L.latLng(400/360.0, 640/360.0),
-	    	bounds2 = L.latLngBounds(southWest2, northEast2);
-
-map.setMaxBounds(bounds2);
-
-
->>>>>>> 563f0c1079f38069b752a709f0449c7d1b0c2e95
 		</script>
 
 </body>
