--- a/tablet/index.html
+++ b/tablet/index.html
@@ -7,10 +7,12 @@
 <meta charset="utf-8" />
 
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+<link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
 <link rel="stylesheet" href="assets/css/style.css">
- <link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
+
+<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
 
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
@@ -22,6 +24,10 @@
   // -----------------
 
 </script>
+
+
+
+
 </head>
 
 <body>
@@ -38,15 +44,52 @@
 </div>
 
 
-<div id="map_pane">
 
-</div>
 
-<div id="map" style="width: 600px; height: 400px"></div>
-	<script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
-<script>
-var map = L.map('map',center: [51.505, -0.09],zoom: 13);
-</script>
+<div id="map_pane" style="height:660px; width:1280px;"></div>
+		<script>
+
+		//create an array to hold all the markers
+   		var markers = [
+   			["The Engineering Computing Center is for the use of Engineering and Computer Science majors/minors, and for anyone currently taking an engineering or computer science class. All users must abide by the Engineering Computing Center Extended Usage Agreement. The ECC has dual booted (Microsoft Windows 7 & Linux Ubuntu) computers located in rooms A, B, C, D, E and the north side of F. Some labs are used as Teaching Laboratories and are open for general use only when classes are not being held in the rooms.  A schedule for these labs can be found by following the Lab links on the right of the screen.  Rooms A and F are open for general use during all ECC business hours.", 0.2685, 0.13458],
+   			["Department of Computer Science and Engineering Office", 0.2529, 1.49689],
+   			["Dr. George Bebis's Office <a href='http://www.google.com'>google</a>", 0.12085, 1.6507]
+   		];
+
+		var map = L.map('map_pane', {zoom:9, minZoom:9, maxZoom:11, zoomControl:false}).setView([0,0], 0);
+
+		var southWest = L.latLng(-400/360.0, -640/360.0),
+	    	northEast = L.latLng(400/360.0, 640/360.0),
+	    	bounds = L.latLngBounds(southWest, northEast);
+
+		L.imageOverlay('assets/img/scaleMap.png', bounds).addTo(map);
+
+		//sets bounds
+		var southWest2 = L.latLng(-400/360.0, -640/360.0),
+	    	northEast2 = L.latLng(400/360.0, 640/360.0),
+	    	bounds2 = L.latLngBounds(southWest2, northEast2);
+
+		map.setMaxBounds(bounds2);
+
+   		//Place all markers on the map
+		for (var i = 0; i < markers.length; i++) 
+		{
+				marker = new L.marker([markers[i][1],markers[i][2]])
+					.bindPopup(markers[i][0])
+					.addTo(map);
+   		}
+
+   		// (just for testing) create a popup whereever the user clicks the map
+		var popup = L.popup();
+		function onMapClick(e) {
+    		popup.setLatLng(e.latlng).setContent("You clicked the map at " + e.latlng.toString()).openOn(map);
+		}
+
+		map.on('click', onMapClick);
+
+		</script>
+
+
 
 <div id="interactive_mode_pane">
 	<!-- dots -->
