--- a/tablet/test.html
+++ b/tablet/test.html
@@ -16,14 +16,14 @@
 
 </head>
 <body>
-	 <div id="map" style="height: 800px; width: 1280px"></div>
+	 <div id="map" style="height: 800px; width: 1480px"></div>
 		<script>
 
 		//create an array to hold all the markers
    		var markers = [
    			["The Engineering Computing Center is for the use of Engineering and Computer Science majors/minors, and for anyone currently taking an engineering or computer science class. All users must abide by the Engineering Computing Center Extended Usage Agreement. The ECC has dual booted (Microsoft Windows 7 & Linux Ubuntu) computers located in rooms A, B, C, D, E and the north side of F. Some labs are used as Teaching Laboratories and are open for general use only when classes are not being held in the rooms.  A schedule for these labs can be found by following the Lab links on the right of the screen.  Rooms A and F are open for general use during all ECC business hours.", 0.2685, 0.13458],
    			["Department of Computer Science and Engineering Office", 0.2529, 1.49689],
-   			["Dr. George Bebis's Office www.google.com", 0.12085, 1.6507]
+   			["Dr. George Bebis's Office <a href='http://www.google.com'>google</a>", 0.12085, 1.6507]
    		];
 
 		var map = L.map('map', {zoom:9, minZoom:9, maxZoom:11, zoomControl:false}).setView([0,0], 0);
