links in markers

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -38,8 +38,9 @@
 
 <div id="welcome_pane">
 	<div id="begin_tour_button" class="button">Begin Tour</div>
-
-	<div id="message">Welcome to the Computer Science &amp; Engineering Department. I can show you offices, labs, and the computing center in the department. </div>
+	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the Computer Science and Engineering Department on this floor. 
+		Places we can go include offices, labs, and the computing center. </div>
+	<!--div id="message">Welcome to the Computer Science &amp; Engineering Department. I can show you offices, labs, and the computing center in the department. </div-->
 </div>
 
 
