Added moving 'You Are Here' marker

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -45,7 +45,8 @@
 
 
 
-<div id="map_pane" style="height:660px; width:1280px;"></div>
+<div id="map_pane" style="height:660px; width:1280px;"><div id="map_robot_marker"></div></div>
+
 <script src="assets/js/map.js"></script>
 
 
