--- a/tablet/index.html
+++ b/tablet/index.html
@@ -24,7 +24,14 @@
 
 </script>
 
+<style type="text/css">
+	html {
+	-moz-transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);	
+	}
 
+</style>
 
 
 </head>
