--- a/tablet/index.html
+++ b/tablet/index.html
@@ -12,12 +12,20 @@
 <link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
 <link rel="stylesheet" href="assets/css/style.css">
 
+<!-- Leaflet script -->
 <script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
 
+<!-- Robot communication files -->
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
 <script src="assets/js/main.js"></script>
+
+<!-- Marker Cluster files 
+<link rel="stylesheet" href="../dist/MarkerCluster.css" />
+<link rel="stylesheet" href="../dist/MarkerCluster.Default.css" />
+<script src="../dist/leaflet.markercluster-src.js"></script>
+-->
 <script>
   // Connecting to ROS
   // -----------------
