--- a/tablet/index.html
+++ b/tablet/index.html
@@ -21,11 +21,11 @@
 <script src="assets/js/roslib.js"></script>
 <script src="assets/js/main.js"></script>
 
-<!-- Marker Cluster files 
-<link rel="stylesheet" href="../dist/MarkerCluster.css" />
-<link rel="stylesheet" href="../dist/MarkerCluster.Default.css" />
-<script src="../dist/leaflet.markercluster-src.js"></script>
--->
+<!-- Marker Cluster files -->
+<link rel="stylesheet" href="assets/js/leaflet.markercluster/dist/MarkerCluster.css" />
+<link rel="stylesheet" href="assets/js/leaflet.markercluster/dist/MarkerCluster.Default.css" />
+<script src="assets/js/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
+
 <script>
   // Connecting to ROS
   // -----------------
