removed example cluster files

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8" />
 
 
-<meta name="viewport" content="width=device-width,initial-scale=1, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<!--meta name="viewport" content="width=device-width,initial-scale=1, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"-->
 
 <link rel="stylesheet" href="assets/js/leaflet-0.7.2/leaflet.css" />
 <link rel="stylesheet" href="assets/css/style.css">
