fixed scale thing, still bkgrnd issues

--- a/tablet/index.html
+++ b/tablet/index.html
@@ -32,12 +32,6 @@
 
 </script>
 
-<style type="text/css">
-	html {
-	-moz-transform: scale(0.5);
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);	
-	}
 
 </style>
 
@@ -46,21 +40,19 @@
 
 <body>
 
-
 <h1 id="header">Roslyn: Your Tour Guide Robot</h1>
 
 <!-- <div style="position:absolute; left:0; top:0; width:1280px; height:800px; background:#eee;z-index:-1;"></div> -->
 
-<div id="welcome_pane">
+<div id="welcome_pane" >
 	<div id="begin_tour_button" class="button">Begin Tour</div>
-	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the Computer Science and Engineering Department on this floor. 
-		Places we can go include offices, labs, and the computing center. </div>
-	<!--div id="message">Welcome to the Computer Science &amp; Engineering Department. I can show you offices, labs, and the computing center in the department. </div-->
+	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the Computer Science 
+	 and Engineering Department on this floor. Places we can go include offices, labs, and the computing center. </div>
 </div>
 
 
 
-<div id="map_pane" style="height:660px; width:1280px;"><div id="map_robot_marker"></div></div>
+<div id="map_pane" ><div id="map_robot_marker"></div></div>
 
 <script src="assets/js/map.js"></script>
 
@@ -72,7 +64,9 @@
 </div>
 
 <div id="end_tour_pane">
-	<div id="message_end">Thank you for touring the Computer Science &amp; Engineering Department. I hope you enjoyed your time and learned about the incredible program we have here as well as some interesting research that our department performs. </div>
+	<div id="message_end">Thank you for touring the Computer Science &amp; Engineering Department. 
+	I hope you enjoyed your time and learned about the incredible program we have here as well as some interesting 
+	research that our department performs. </div>
 </div>
 
 <div id="footer">
