Fixing app bugs.

--- a/roslyn_app/www/index.html
+++ b/roslyn_app/www/index.html
@@ -40,7 +40,9 @@
 
 <body>
 
-<h1 id="header">Roslyn: Your Tour Guide Robot</h1>
+<div style="position:absolute; top:0; left:0; height:200; background:red; z-index:1000; width:870px;">aa</div>
+
+<h1 id="header">aaaRoslyn: Your Tour Guide Robot</h1>
 
 <!-- <div style="position:absolute; left:0; top:0; width:1280px; height:800px; background:#eee;z-index:-1;"></div> -->
 
@@ -52,7 +54,7 @@
 
 
 
-<div id="map_pane" ><div id="map_robot_marker"></div></div>
+<div id="map_pane"><div id="map_robot_marker"></div></div>
 
 <script src="assets/js/map.js"></script>
 
