Corrected size problem for tablet.

--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -26,23 +26,14 @@
 <link rel="stylesheet" href="assets/js/leaflet.markercluster/dist/MarkerCluster.Default.css" />
 <script src="assets/js/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
 
-<script>
-  // Connecting to ROS
-  // -----------------
-
-</script>
-
-
-</style>
 
 
 </head>
 
 <body>
 
-<div style="position:absolute; top:0; left:0; height:200; background:red; z-index:1000; width:870px;">aa</div>
 
-<h1 id="header">aaaRoslyn: Your Tour Guide Robot</h1>
+<h1 id="header">Roslyn: Your Tour Guide Robot</h1>
 
 <!-- <div style="position:absolute; left:0; top:0; width:1280px; height:800px; background:#eee;z-index:-1;"></div> -->
 
@@ -61,7 +52,7 @@
 
 <div id="interactive_mode_pane">
 	<!-- dots -->
-	<div class="marker" style="top:360px;left:960px;"></div>
+	<div class="marker" style="top:360px;left:760px;"></div>
 	<div class="marker" style="top:270px;left:350px;"></div>
 </div>
 
