--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -16,7 +16,7 @@
 <script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
 
 <!-- Robot communication files -->
-<script src="assets/js/cordova.js"></script>
+<!--<script src="assets/js/cordova.js"></script>-->
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
