--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -52,7 +52,8 @@
 
 <div id="interactive_mode_pane">
 
-
+	<video id="myvideo" loop></video>
+	
 	<!-- dots -->
 	<div class="marker" style="top:360px;left:760px;"></div>
 	<div class="marker" style="top:270px;left:350px;"></div>
