Interactive Mode working with IP assignment.

--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -52,11 +52,9 @@
 
 <div id="interactive_mode_pane">
 
-	<video id="myvideo" loop></video>
-	
-	<!-- dots -->
-	<div class="marker" style="top:360px;left:760px;"></div>
-	<div class="marker" style="top:270px;left:350px;"></div>
+	<div id="video_pane"></div>
+
+	<div id="information"><div id="information_content">Loading...</div></div>
 </div>
 
 <div id="end_tour_pane">
