Made lawlor specific app.

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -39,10 +39,9 @@
 
 <div id="welcome_pane" >
 	<div id="begin_tour_button" class="button">Begin Tour</div>
-	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the Computer Science 
-	 and Engineering Department on this floor. Places we can go include offices, labs, and the computing center. </div>
+	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the entrance of Lawlor Event Center. Learn about and travel to various Innovation Day points of interest.</div>
 </div>
-
+Learn about Innovation Day
 
 
 <div id="map_pane"><div id="map_robot_marker"></div></div>
