--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -20,7 +20,7 @@
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="assets/js/mainLawlor.js"></script>   			<!--change this back to main.js for SEM tours -->
 
 <!-- Marker Cluster files -->
 <link rel="stylesheet" href="assets/js/leaflet.markercluster/dist/MarkerCluster.css" />
@@ -47,7 +47,7 @@
 
 <div id="map_pane"><div id="map_robot_marker"></div></div>
 
-<script src="assets/js/map.js"></script>
+<script src="assets/js/mapLawlor.js"></script>
 
 
 <div id="interactive_mode_pane">
