--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -16,7 +16,7 @@
 <script src="assets/js/leaflet-0.7.2/leaflet.js"></script>
 
 <!-- Robot communication files -->
-<!--<script src="assets/js/cordova.js"></script>-->
+<script src="cordova.js"></script>
 <script src="assets/js/jquery2.js"></script>
 <script src="assets/js/eventemitter2.js"></script>
 <script src="assets/js/roslib.js"></script>
@@ -39,10 +39,8 @@
 
 <div id="welcome_pane" >
 	<div id="begin_tour_button" class="button">Begin Tour</div>
-	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the Computer Science 
-	 and Engineering Department on this floor. Places we can go include offices, labs, and the computing center. </div>
+	<div id="message">Welcome to the University of Nevada, Reno. I can take you on a tour of the entrance of Lawlor Event Center. Learn about and travel to various Innovation Day points of interest.</div>
 </div>
-
 
 
 <div id="map_pane"><div id="map_robot_marker"></div></div>
@@ -54,7 +52,7 @@
 
 	<div id="video_pane"></div>
 
-	<div id="information"><div id="information_content">Loading...</div></div>
+	<div id="information"><div id="information_content">Interactive mode disabled for Lawlor.</div></div>
 </div>
 
 <div id="end_tour_pane">
